fix(layout): prevent overflow in Chromium-based browsers

--- a/css/sliide.css
+++ b/css/sliide.css
@@ -79,7 +79,7 @@
     font-family: "museo-slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
     margin: 0;
     min-block-size: 100vh;
-    overflow-x: hidden;
+    overflow: hidden;
     text-rendering: optimizeSpeed;
   }
   img {
